--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     border-radius: 5px;
     z-index: 1000;
     cursor: pointer;
-  ">
+  " class="glowButton">
     🔊 Play with Sound
   </button>
   
@@ -237,7 +237,7 @@
 
 
   <div style="position: fixed; bottom: 80px; right: 20px; z-index: 1000;">
-    <a href="https://docs.google.com/forms/d/1FsLY64uCjFaFQifoeuYQfqPh_Aa9PnZ2nusb-Jb3W6U/prefill" target="_blank" style="
+    <a href="https://docs.google.com/forms/d/1FsLY64uCjFaFQifoeuYQfqPh_Aa9PnZ2nusb-Jb3W6U/prefill" class="glowButton" target="_blank" style="
       display: inline-block;
       padding: 12px 18px;
       background-color: #00c3ff;
@@ -254,7 +254,50 @@
 
   
 
-  <script src="script.js"></script>
+  <script src="script.js">
+        const button = document.getElementByclass("glowButton");
+        let stars = [];
+
+        button.addEventListener("mouseover", () => {
+            removeStars();
+            for (let i = 0; i < 5; i++) { 
+                let star = document.createElement("div");
+                star.classList.add("stars");
+                if (Math.random() > 0.5) star.classList.add("large");
+                document.body.appendChild(star);
+
+                let buttonRect = button.getBoundingClientRect();
+                let startX = Math.random() * buttonRect.width + buttonRect.left;
+                let startY = Math.random() * buttonRect.height + buttonRect.top;
+                
+                star.style.left = `${startX}px`;
+                star.style.top = `${startY}px`;
+
+                setTimeout(() => {
+                    let angle = Math.random() * 2 * Math.PI;
+                    let distance = Math.random() * 50 + 20;
+                    let moveX = Math.cos(angle) * distance;
+                    let moveY = Math.sin(angle) * distance;
+                    star.style.transform = `rotate(45deg) translate(${moveX}px, ${moveY}px)`;
+                    star.style.opacity = "1";
+                }, 50);
+                
+                stars.push(star);
+            }
+        });
+
+        button.addEventListener("mouseleave", () => {
+            removeStars();
+        });
+
+        function removeStars() {
+            stars.forEach(star => {
+                star.style.opacity = "0";
+                setTimeout(() => star.remove(), 500);
+            });
+            stars = []; 
+        }
+    </script>
 
 </body>
 </html>
