--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   </video>
   
   <div class="overlay"></div>
-  
+  <div class="box">
   <!-- Play With Sound Button -->
   <button id="unmute-btn" style="
     position: fixed;
@@ -156,6 +156,7 @@
   " class="glowButton">
     🔊 Play with Sound
   </button>
+  </div>
   
 
   <div class="overlay"></div>
@@ -236,7 +237,7 @@
 
 
 
-  <div style="position: fixed; bottom: 80px; right: 20px; z-index: 1000;">
+  <div style="position: fixed; bottom: 80px; right: 20px; z-index: 1000;" class="box">
     <a href="https://docs.google.com/forms/d/1FsLY64uCjFaFQifoeuYQfqPh_Aa9PnZ2nusb-Jb3W6U/prefill" class="glowButton" target="_blank" style="
       display: inline-block;
       padding: 12px 18px;
