--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 
   <div style="position: fixed; bottom: 80px; right: 20px; z-index: 1000;" class="box">
-    <a href="https://docs.google.com/forms/d/1FsLY64uCjFaFQifoeuYQfqPh_Aa9PnZ2nusb-Jb3W6U/prefill" class="glowButton" target="_blank" style="
+    <a href="register.html" class="glowButton" target="_blank" style="
       display: inline-block;
       padding: 12px 18px;
       background-color: #00c3ff;
